--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,8 +56,10 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\RagDoll.cs" />
+    <Compile Include="Assets\Resources\Scripts\RagDoll.cs" />
     <Compile Include="Assets\Resources\Scripts\Nav.cs" />
+    <Compile Include="Assets\Resources\Scripts\Player.cs" />
+    <Compile Include="Assets\Resources\Scripts\Zombie.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
